# ray_tracing_one_weekend

./: .gitignore  Cargo.toml  README.md  cspell.json  image.ppm
.cargo/: config.toml
src/: camera.rs  cli.rs  color.rs  hittable.rs  lib.rs  material.rs  materials.rs  ray.rs  scene.rs  sphere.rs  vec.rs
src/hittable/: aabb.rs  bvh.rs  sphere.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs
