[package]
name = "ray_tracing_one_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
indicatif = { version = "0.17.3", features = ["rayon"] }
nalgebra = "0.32.2"
rand = "0.8.5"
rayon = "1.7.0"
